# Meta_FTPFN

./: .gitignore  CHANGELOG.md  README.md  main.py  pre-commit-config.yaml  pyproject.toml  requirements-ifbo.txt
configs/: config.yaml
configs/callbacks/: ckpt.yaml  ckpt_nll_avg.yaml  clip.yaml  mlflow.yaml  plot_1dheatmap.yaml  validation_real.yaml  validation_synthetic.yaml
configs/dataset/: bnn_interpolation.yaml  bnn_output_interpolation.yaml  default.yaml  dummy.yaml  ft_pfn.yaml  homebrew.yaml  paired_extrapolation.yaml  prototype.yaml  same_task.yaml  same_task_new_sample.yaml  task_latent.yaml
configs/dataset/depreciate/: bnn_output_interpolation.yaml  homebrew.yaml
configs/dispatch/: slurm.yaml
configs/experiment/: debug.yaml  hefty_evaluation.yaml  paired_extrapolation.yaml  prototype.yaml  slurm.yaml  test.yaml
configs/model/: default.yaml  multi_layer.yaml  ppfn.yaml  ppfn_align.yaml  ppfn_cf.yaml  ppfn_delta.yaml  ppfn_glt.yaml  ppfn_mha.yaml  ppfn_mha_hp.yaml  ppfn_mha_hp_qwen.yaml  ppfn_mha_simple.yaml  ppfn_nw.yaml  ppfn_padded.yaml  ppfn_single_layer.yaml  prototype.yaml  prototype_invariant.yaml  prototype_meta_jepa.yaml
configs/optimizer/: adamw.yaml
configs/scheduler/: constant.yaml  cosine.yaml  cosine_with_warmup.yaml
configs/trainer/: default.yaml  full.yaml  prototype.yaml  quick.yaml
docker/: docker-compose.yaml  readme.md
docker/mlflow/: Dockerfile  requirements.txt
docker/postgres/: init.sql
slurm/: slurm_mlflow.md  slurm_setup.md  uv.md
slurm/debug_integrated/: train.py
slurm/debug_integrated/conf/: config.yaml
slurm/jobs/: oned_ablation.sh
slurm/template/: integrated.sh  slim.sh
src/: train.py  validate_layer_1d.py
src/ppfn/: __init__.py  train.py
src/ppfn/dataset/: __init__.py  priordataloader.py  synthetic_task_meta_test_dataset.py
src/ppfn/dataset/get_batch/: bnn_output_interpolation.py  chronos2_idea.md  ftpfn.py  ftpfn_get_batch.py  get_related_batch.py  same_task.py  same_task_affine.py  task_latent.py  task_transforms.py
src/ppfn/dataset/get_batch/deprec/: bnn_output_interpolation.py  same_task.py  same_task_affine.py  same_task_min_max.py
src/ppfn/dataset/get_batch/transforms/: __init__.py  abstract_transform.py  active_subspace.py  ae_warping.py  affine_shift.py  beta_warping.py  bnn_interpolation.py  bottleneck_inn_warping.py  fidelity_warp.py  inn_warping.py  latent_input.py  misc.py  plot.py  rank_consistency.py  same_task.py
src/ppfn/dataset/mfpbench/: meta_test_dataset.py  task_sampling.py  tasks.py
src/ppfn/dataset/prior/: __init__.py  allocation_prior.py  base_curves.py  bnn_link_fn.py  bnn_link_fn_old.py  bnn_prior.py  dataset_prior.py  demo_prior.ipynb  meta_task_prior.py  multifidelity_problem_prior.py  other.py
src/ppfn/model/: __init__.py
src/ppfn/model/baselines/: ft_pfn.py  ft_pfn_padding.py
src/ppfn/model/deprec/: __init__.py  ft_ppfn.py  interleaved_model.py  nadaraya_watson.py
src/ppfn/model/experimental/: validate_layer_1d.py
src/ppfn/model/experimental/harmonic_restart/: harmonic_prior.py  model.py  training.py
src/ppfn/model/experimental/layers/: glt_adapter.py
src/ppfn/model/experimental/validation_manifold_adapter/: meta_transfer_backbone.py  training.py
src/ppfn/model/mymodel/: __init__.py  adapter_wrapper.py  attn_nll_objective.py  cross_fusion.py  cross_fusion_adapter.py  ft_ppfn.py  interleaved_model.py  interleavedmodel.py  meta_context.py  multistream_objective.py  nadaraya_watson.py  nw_adapter.py  ppfn_model.py  ppfn_wrapper.py  stream_mutations.py  stream_parser.py
src/ppfn/model/mymodel/deprec/: ppfn_wrapper.py
src/ppfn/model/mymodel/layers/: adapter_wrapper.py  alignment_adapter.py  cross_fusion_adapter.py  delta_surrogate_adapter.py  glt_adapter.py  manifold_adapter.py  mha_adapter.py  mha_adapter_qwen.py  mha_adapter_v2.py  nw_adapter.py  nw_adapter_v2.py
src/ppfn/model/mymodel/layers/validation_manifold_adapter/: plotting.py  prior.py  training.py
src/ppfn/model/ppfn/: cross_attn.py  crossfusion.py  ppfn.py
src/ppfn/trainer/: __init__.py  prototype_trainer.py  scheduler.py  trainer.py
src/ppfn/trainer/callbacks/: __init__.py  abstract_callback.py  callbacks.py  checkpoint.py  checkpoint_callback.py  early_stopping.py  grad_clipping.py  hefty_meta_test.py  meta_test.py  meta_test_callback.py  mfpbench_callback.py  mlflow.py  mlflow_callback.py  mlflow_cb.py
src/ppfn/utils/: deprecate.py  git_hash.py  gracefull_exit.py  load_ftpfn.py  mybatch.py
src/prototype/harmonic_restart/: __init__.py  baseline_cross_attn.py  cross_feature.py  gating.py  harmonic_prior.py  heatmap_callback.py  infer_extrapolation.py  invariant_layer.py  layer.py  layer_v2.py  loss.py  model.py  pfn_layer.py  training.py  v3.py
src/prototype/meta_jepa_marginal/: jepa.py
src/prototype/meta_jepa_v2/: loss.py  model.py  pfn.py
src/prototype/perceiver/: perceiver.py  readme.md
tests/: conftest.py  fixtures.py  test_allocation.py  test_callback_checkpoint.py  test_cross_fusion.py  test_forward_meta_context.py  test_ft_pfn.py  test_ft_pfn_padding.py  test_ft_ppfn_parse.py  test_integration.py  test_interleaved_model.py  test_linker.py  test_meta_test_callback.py  test_ppfn.py
tests/test_model/: test_ft_pfn.py  test_ppfn.py  test_stream_mutations.py  test_stream_parser.py
tests/test_prior/: test_allocation.py  test_fidelity_warp_transform.py  test_same_task_transform.py
tests/test_trainer/: test_callback_checkpoint.py  test_objective.py
