[project]
name = "meta-ftpfn"
version = "0.2.0"
description = "PPFN: Batch awareness in PFNs for Meta-Task Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"dotenv>=0.9.9",
	"gpytorch>=1.14.3",
	"grakel>=0.1.10",
	"hydra-core>=1.3.2",
	"ifbo>=0.3.13",
	"matplotlib>=3.10.8",
	"mlflow>=3.8.0",
	"nltk>=3.9.2",
	"numpy==1.26.4",
	"pandas>=2.3.3",
	"path>=17.1.1",
	"portalocker>=3.2.0",
	"psutil>=7.1.3",
	"pyyaml>=6.0.3",
	"scipy>=1.15.3",
	"submitit>=1.5.3",
	"tensorboard>=2.20.0",
	"torch>=2.9.1",

	# IFBO icml 2024 dependencies

	"PFNs4HPO",
#	"mf-prior-bench",
	"neps_lcpfn_hpo",
	"pfns_hpo",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

#[tool.uv.workspace]
#members = [
##	"external/ifbo_icml2024",
#	"external/ifbo_icml2024/src/mf-prior-bench",
#	"external/ifbo_icml2024/src/neps_lcpfn_hpo",
#	"external/ifbo_icml2024/src/PFNs4HPO",
#	"external/ifbo_icml2024/src/pfns_hpo"
#]




[tool.uv.sources]
#ifbo = { path = "./external/ifbo_icml2024", editable = true }
PFNs4HPO = { path = "./external/ifbo_icml2024/src/PFNs4HPO/", editable = true }
#mf-prior-bench = { path = "./external/ifbo_icml2024/src/mf-prior-bench/", editable = true }
neps_lcpfn_hpo = { path = "./external/ifbo_icml2024/src/neps_lcpfn_hpo/", editable = true }
pfns_hpo = { path = "./external/ifbo_icml2024/src/pfns_hpo/", editable = true }

