[project]
name = "meta-ftpfn"
version = "0.7.0"
description = "PPFN: Batch awareness in PFNs for Meta-Task Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"dotenv>=0.9.9",
	"gpytorch>=1.14.3",
	"grakel>=0.1.10",
	"hydra-core>=1.3.2",
	"ifbo>=0.3.13",
	"matplotlib>=3.10.8",
	"mlflow>=3.8.0",
	"nltk>=3.9.2",
	"numpy==1.26.4",
	"pandas[plotting]>=2.3.3",
	"path>=17.1.1",
	"portalocker>=3.2.0",
	"psutil>=7.1.3",
	"pyyaml>=6.0.3",
	"scipy>=1.15.3",
	"submitit>=1.5.3",
	"tensorboard>=2.20.0",
	"torch>=2.9.1",
	# IFBO icml 2024 dependencies
	"PFNs4HPO",
	#	"mf-prior-bench",
	"neps_lcpfn_hpo",
	"pfns_hpo",
	"ConfigSpace==0.4.21",
	"seaborn>=0.13.2",
	"plotly>=6.5.2",
	"gitinfo>=1.2.0",
	"anytree>=2.13.0",
	"rich>=14.2.0",
	"pudb>=2025.1.5",
	"more-itertools>=10.8.0",
	"notebook[plotting]>=7.5.3",
	"pip[plotting]>=26.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.1",
]

#[tool.uv.workspace]
#members = [
##	"external/ifbo_icml2024",
#	"external/ifbo_icml2024/src/mf-prior-bench",
#	"external/ifbo_icml2024/src/neps_lcpfn_hpo",
#	"external/ifbo_icml2024/src/PFNs4HPO",
#	"external/ifbo_icml2024/src/pfns_hpo"
#]

[tool.semantic_release]
version_variable = "pyproject.toml:version" # Keep version here
branch = "main"                             # Your release branch
upload_to_pypi = false                      # Set to true if publishing
build_command = "uv build"                  # Use uv for building

# Customizing commit parsing
[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "feature", "fix", "hot-fix", "perf", "docs"]
minor_tags = ["feat", "feature"]
patch_tags = ["fix", "hot-fix", "perf"]

# Define your branches and their release types
[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.features]
# This matches your current branch "feature/commitzen-pre-commit"
match = "(feature|feat)/.*"
prerelease = true
prerelease_token = "alpha"



[tool.uv.sources]
#ifbo = { path = "./external/ifbo_icml2024", editable = true }
#mfpbench = { path = "./external/ifbo_icml2024/src/mf-prior-bench/src", editable = true }
PFNs4HPO = { path = "./external/ifbo_icml2024/src/PFNs4HPO/", editable = true }
neps_lcpfn_hpo = { path = "./external/ifbo_icml2024/src/neps_lcpfn_hpo/", editable = true }
pfns_hpo = { path = "./external/ifbo_icml2024/src/pfns_hpo/", editable = true }

